{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 22,
  "lineage": "a3c3e65c-d3cb-80e1-db87-def46a6a418d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_ret1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f007bf1d5c770c6e",
            "arn": "arn:aws:ec2:eu-west-1:105872691730:instance/i-064ac2348dd950e23",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064ac2348dd950e23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fa5fa3e5c55631e",
            "private_dns": "ip-10-0-1-21.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058405412619b3906",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079a7ef5def6f90bf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a233a5d020d14a66"
            ]
          },
          "dependencies": [
            "aws_security_group.ret_security_group",
            "aws_subnet.ret_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_ret2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f007bf1d5c770c6e",
            "arn": "arn:aws:ec2:eu-west-1:105872691730:instance/i-0c57c304d0ec25fb7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c57c304d0ec25fb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ffe7d487ea0f1d4d",
            "private_dns": "ip-10-0-2-72.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e70b37cd54318ff9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0e607c5581809b9",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a233a5d020d14a66"
            ]
          },
          "dependencies": [
            "aws_security_group.ret_security_group",
            "aws_subnet.ret_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ret_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:internet-gateway/igw-0953e9c4a1a196eea",
            "id": "igw-0953e9c4a1a196eea",
            "owner_id": "105872691730",
            "vpc_id": "vpc-0e20863058733e977"
          },
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ret_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:loadbalancer/app/my-application-load-balancer/3b072a63bd5d6f50",
            "arn_suffix": "app/my-application-load-balancer/3b072a63bd5d6f50",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-application-load-balancer-1725962456.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:loadbalancer/app/my-application-load-balancer/3b072a63bd5d6f50",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02707dd63e93ecf47"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079a7ef5def6f90bf"
              },
              {
                "subnet_id": "subnet-0a0e607c5581809b9"
              }
            ],
            "subnets": [
              "subnet-079a7ef5def6f90bf",
              "subnet-0a0e607c5581809b9"
            ],
            "tags": {
              "Name": "ret-alb"
            },
            "tags_all": {
              "Name": "ret-alb"
            },
            "vpc_id": "vpc-0e20863058733e977",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.ret_subnet1",
            "aws_subnet.ret_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:listener/app/my-application-load-balancer/3b072a63bd5d6f50/a02eebc4f86be017",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:listener/app/my-application-load-balancer/3b072a63bd5d6f50/a02eebc4f86be017",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:loadbalancer/app/my-application-load-balancer/3b072a63bd5d6f50",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ret_alb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.ret_subnet1",
            "aws_subnet.ret_subnet2",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478",
            "arn_suffix": "targetgroup/my-target-group/4a87b18bfa166478",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 200,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 90,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e20863058733e977"
          },
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478-20240408100728083900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478",
            "target_id": "i-064ac2348dd950e23"
          },
          "dependencies": [
            "aws_instance.instance_ret1",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.ret_security_group",
            "aws_subnet.ret_subnet1",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478-20240408100728143100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:105872691730:targetgroup/my-target-group/4a87b18bfa166478",
            "target_id": "i-0c57c304d0ec25fb7"
          },
          "dependencies": [
            "aws_instance.instance_ret2",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.ret_security_group",
            "aws_subnet.ret_subnet2",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:route-table/rtb-0de5b131bf38e38cd",
            "id": "rtb-0de5b131bf38e38cd",
            "owner_id": "105872691730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0953e9c4a1a196eea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20863058733e977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ret_igw",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c870603333d067",
            "route_table_id": "rtb-0de5b131bf38e38cd",
            "subnet_id": "subnet-079a7ef5def6f90bf"
          },
          "dependencies": [
            "aws_internet_gateway.ret_igw",
            "aws_route_table.route_table",
            "aws_subnet.ret_subnet1",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4f42f95ba4b2c81",
            "route_table_id": "rtb-0de5b131bf38e38cd",
            "subnet_id": "subnet-0a0e607c5581809b9"
          },
          "dependencies": [
            "aws_internet_gateway.ret_igw",
            "aws_route_table.route_table",
            "aws_subnet.ret_subnet2",
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:security-group/sg-02707dd63e93ecf47",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02707dd63e93ecf47",
            "ingress": [],
            "name": "terraform-20240408060206087100000002",
            "name_prefix": "terraform-",
            "owner_id": "105872691730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20863058733e977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ret_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:security-group/sg-0a233a5d020d14a66",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a233a5d020d14a66",
            "ingress": [],
            "name": "terraform-20240408060206082700000001",
            "name_prefix": "terraform-",
            "owner_id": "105872691730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20863058733e977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ret_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:subnet/subnet-079a7ef5def6f90bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079a7ef5def6f90bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105872691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e20863058733e977"
          },
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ret_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:subnet/subnet-0a0e607c5581809b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e607c5581809b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105872691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e20863058733e977"
          },
          "dependencies": [
            "aws_vpc.ret_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ret_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:105872691730:vpc/vpc-0e20863058733e977",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09465e76b2d2c48fb",
            "default_route_table_id": "rtb-08676c36dba7302aa",
            "default_security_group_id": "sg-0010f607d8cdf17a7",
            "dhcp_options_id": "dopt-05339f4f53ff92b49",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e20863058733e977",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08676c36dba7302aa",
            "owner_id": "105872691730"
          }
        }
      ]
    }
  ]
}